testsuite/tests/overloadedrecflds/should_fail/DRFUnused.stderr

DRFUnused.hs:18:5: error:
    Ambiguous occurrence ‘foo’
    It could refer to
       either the field ‘foo’ of record ‘U’, defined at DRFUnused.hs:12:16
           or the field ‘foo’ of record ‘T’, defined at DRFUnused.hs:11:16
           or the field ‘foo’ of record ‘S’, defined at DRFUnused.hs:10:16
